--- a/sidebar.html
+++ b/sidebar.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <title></title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/base.css">
 <script src="lib/jquery-2.2.4.min.js"></script>
 <script src="lib/jquery-ui-1.12.1.custom.min.js"></script>
 <script src="main.js"></script>
