--- a/main_ja.html
+++ b/main_ja.html
@@ -18,12 +18,8 @@
 		<span id="conf_cancel" class="header_btn_conf">キャンセル</span>
 	</div>
 </div>
-<div class="info" data-info-ver="1.1.0">
-	<p><b>更新情報（2017/11/13）：</b>サイドバーで表示中のタブと同じリストのタブの切り替えが簡単にできるようになりました。</p>
-	<div class="info_close" title="閉じる"></div>
-</div>
-<div class="info" data-info-ver="1.2.0">
-	<p><b>更新情報（2017/11/19）：</b> Ctrl+F1でサイドバーの開閉ができるようになりました。サイドバーでリストの切り替えができるようになりました。文字サイズ・カラーテーマを変更できるようになりました。中クリックでタブを閉じるオプションをつけました。</p>
+<div class="info" data-info-ver="1.3.0">
+	<p><b>更新情報（2017/12/03）：</b> バージョン1.3.0をリリースしました。アップデートしていただきありがとうございます。<a href="https://azisava.sakura.ne.jp/tablistboard/">サポートサイト</a>にてぜひ更新内容をご確認下さい。</p>
 	<div class="info_close" title="閉じる"></div>
 </div>
 <div id="config">
@@ -40,6 +36,7 @@
 			<option value="default">標準</option>
 			<option value="black">ブラック</option>
 			<option value="silver">シルバー</option>
+			<option value="flat">フラット</option>
 		</select></li>
 		<li><label><input type="checkbox" id="conf_wordwrap">タブ名は折り返して全て表示する。</label></li>
 		<li><label><input type="checkbox" id="conf_oldtab"><select id="conf_oldtabterm">
@@ -57,8 +54,10 @@
 	</ul>
 	<h2>その他の機能</h2>
 	<ul>
-		<li><label><input type="checkbox" id="conf_otherlists">サイドバーに他のリスト一覧を表示する。</label></li>
+		<li><label><input type="checkbox" id="conf_otherlists">サイドバーの他のリスト一覧は常に表示しておく。</label></li>
 		<li><label><input type="checkbox" id="conf_middleclick">タブを中クリックすることでタブを閉じる。</label></li>
+		<li><label><input type="checkbox" id="conf_removetabs">タブが残っているリストも削除できるようにする。</label></li>
+		<li><label><input type="checkbox" id="conf_tabbarorder">タブバーのタブの並び順を自動的に調整する。</label></li>
 	</ul>
 	<h2>初期化</h2>
 	<ul>
@@ -66,7 +65,7 @@
 	</ul>
 	<h2>ヘルプ</h2>
 	<ul>
-		<li><a href="https://azisava.sakura.ne.jp/tablistboard/" target="_blank">サポートページ</a>をご覧下さい。</li>
+		<li><a href="https://azisava.sakura.ne.jp/tablistboard/">サポートページ</a>をご覧下さい。</li>
 	</ul>
 </div>
 <div id="main"></div>
