--- a/sidebar.html
+++ b/sidebar.html
@@ -9,7 +9,7 @@
 <script src="main.js"></script>
 </head>
 <body>
-<ul id="sidebar"></ul>
+<div id="sidebar"></div>
 <p id="sidebar_msg"></p>
 </body>
 </html>
