--- a/main_ja.html
+++ b/main_ja.html
@@ -18,8 +18,8 @@
 		<span id="conf_cancel" class="header_btn_conf">キャンセル</span>
 	</div>
 </div>
-<div class="info" data-info-ver="1.3.0">
-	<p><b>更新情報（2017/12/03）：</b> バージョン1.3.0をリリースしました。アップデートしていただきありがとうございます。<a href="https://azisava.sakura.ne.jp/tablistboard/">サポートサイト</a>にてぜひ更新内容をご確認下さい。</p>
+<div class="info" data-info-ver="1.4.0">
+	<p><b>更新情報（2017/12/21）：</b> バージョン1.4.0をリリースしました。アップデートしていただきありがとうございます。タブとタブリストに便利な右クリックメニュー機能を追加しました。<a href="https://azisava.sakura.ne.jp/tablistboard/">サポートサイト</a>にてぜひ更新内容をご確認下さい。</p>
 	<div class="info_close" title="閉じる"></div>
 </div>
 <div id="config">
@@ -37,8 +37,9 @@
 			<option value="black">ブラック</option>
 			<option value="silver">シルバー</option>
 			<option value="flat">フラット</option>
+			<option value="flatblack">フラットブラック</option>
 		</select></li>
-		<li><label><input type="checkbox" id="conf_wordwrap">タブ名は折り返して全て表示する。</label></li>
+		<li><label><input type="checkbox" id="conf_wordwrap">タブ名は折り返して全て表示する。<p class="weak">└ OFFにすると、長いタブ名は1行に収まるように省略されます。</p></label></li>
 		<li><label><input type="checkbox" id="conf_oldtab"><select id="conf_oldtabterm">
 			<option value="1">1時間</option>
 			<option value="12">12時間</option>
@@ -54,14 +55,18 @@
 	</ul>
 	<h2>その他の機能</h2>
 	<ul>
-		<li><label><input type="checkbox" id="conf_otherlists">サイドバーの他のリスト一覧は常に表示しておく。</label></li>
+		<li><label><input type="checkbox" id="conf_otherlists">サイドバーの他のリスト一覧は常に表示しておく。<p class="weak">└ OFFにすると、サイドバー上のリスト名の部分をクリックすることで表示非表示を切り替えられます。</p></label></li>
 		<li><label><input type="checkbox" id="conf_middleclick">タブを中クリックすることでタブを閉じる。</label></li>
-		<li><label><input type="checkbox" id="conf_removetabs">タブが残っているリストも削除できるようにする。</label></li>
+		<li><label><input type="checkbox" id="conf_removetabs">タブが残っているリストも削除できるようにする。<p class="weak">└ OFFにすると、リスト内のタブを全て削除したときしかリストを削除できなくなります。</p></label></li>
 		<li><label><input type="checkbox" id="conf_tabbarorder">タブバーのタブの並び順を自動的に調整する。</label></li>
 	</ul>
-	<h2>初期化</h2>
+	<h2>リセット</h2>
 	<ul>
-		<li><button id="conf_reset">初期化…</button></li>
+		<li><button
+			class="conf_reset" data-reset="1">タブリスト情報を消去…</button><button
+			class="conf_reset" data-reset="2">設定をリセット…</button><button
+			class="conf_reset" data-reset="3">未読状態をリセット…</button>
+		</li>
 	</ul>
 	<h2>ヘルプ</h2>
 	<ul>
