--- a/main_en.html
+++ b/main_en.html
@@ -33,11 +33,11 @@
 			<option value="verysmall">Very small</option>
 		</select></li>
 		<li>Color theme: <select id="conf_theme">
-			<option value="default">Default</option>
-			<option value="black">Black</option>
-			<option value="silver">Silver</option>
 			<option value="flat">Flat</option>
 			<option value="flatblack">Flat black</option>
+			<option value="default">Original</option>
+			<option value="black">Original black</option>
+			<option value="silver">Silver</option>
 		</select></li>
 		<li><label><input type="checkbox" id="conf_wordwrap">Display all of tab name <p class="weak">&#9492; If you uncheck this, long tab name will be omitted and shown in one line.</p></label></li>
 		<li><label><input type="checkbox" id="conf_oldtab">Change color of old tabs which haven't been accessed more than <select id="conf_oldtabterm">
