--- a/main_ja.html
+++ b/main_ja.html
@@ -33,11 +33,11 @@
 			<option value="verysmall">最小</option>
 		</select></li>
 		<li>カラーテーマ：<select id="conf_theme">
-			<option value="default">標準</option>
-			<option value="black">ブラック</option>
-			<option value="silver">シルバー</option>
 			<option value="flat">フラット</option>
-			<option value="flatblack">フラットブラック</option>
+			<option value="flatblack">フラット・ブラック</option>
+			<option value="default">オリジナル</option>
+			<option value="black">オリジナル・ブラック</option>
+			<option value="silver">シルバー</option>
 		</select></li>
 		<li><label><input type="checkbox" id="conf_wordwrap">タブ名は折り返して全て表示する。<p class="weak">└ OFFにすると、長いタブ名は1行に収まるように省略されます。</p></label></li>
 		<li><label><input type="checkbox" id="conf_oldtab"><select id="conf_oldtabterm">
