--- a/main_en.html
+++ b/main_en.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <title>Tab List Board</title>
 <link rel="stylesheet" href="css/base.css">
-<script src="lib/jquery-2.2.4.min.js"></script>
+<script src="lib/jquery-3.3.1.min.js"></script>
 <script src="lib/jquery-ui-1.12.1.custom.min.js"></script>
 <script src="main.js"></script>
 </head>
@@ -18,8 +18,8 @@
 		<span id="conf_cancel" class="header_btn_conf">Cancel</span>
 	</div>
 </div>
-<div class="info" data-info-ver="1.4.0">
-	<p><b>Update information (2017/12/21) :</b> Version 1.4.0 has been released. Thank you for updating. Context menus with useful functions for tabs and tab lists are now available. Please check update information on <a href="https://azisava.sakura.ne.jp/tablistboard/en.html">support page</a>.</p>
+<div class="info" data-info-ver="1.5.0">
+	<p><b>Update information (2018/10/27) :</b> Version 1.5.0 has been released. Thank you for updating. Shortcut keys are now configurable. You can now hide tabs of other lists in tabbar while sidebar is open. Please check update information on <a href="https://azisava.sakura.ne.jp/tablistboard/en.html">support page</a>.</p>
 	<div class="info_close" title="Close"></div>
 </div>
 <div id="config">
@@ -59,6 +59,12 @@
 		<li><label><input type="checkbox" id="conf_middleclick">Close a tab by middle button click</label></li>
 		<li><label><input type="checkbox" id="conf_removetabs">Allow deleting a tab list even if it still has tabs <p class="weak">&#9492; If you uncheck this, you can delete a tab list only when the list is empty.</p></label></li>
 		<li><label><input type="checkbox" id="conf_tabbarorder">Automatically sort tabs in tabbar</label></li>
+		<li><label><input type="checkbox" id="conf_hidetabs">Hide tabs of other lists in tabbar while sidebar is open</label></li>
+	</ul>
+	<h2>Shortcut</h2>
+	<ul>
+		<li>Shortcut keys for the following actions are configurable.</li>
+		<li id="conf_shortcuts"></li>
 	</ul>
 	<h2>Reset</h2>
 	<ul>
