--- a/main_en.html
+++ b/main_en.html
@@ -18,8 +18,8 @@
 		<span id="conf_cancel" class="header_btn_conf">Cancel</span>
 	</div>
 </div>
-<div class="info" data-info-ver="1.5.0">
-	<p><b>Update information (2018/10/27) :</b> Version 1.5.0 has been released. Thank you for updating. Shortcut keys are now configurable. You can now hide tabs of other lists in tabbar while sidebar is open. Please check update information on <a href="https://azisava.sakura.ne.jp/tablistboard/en.html">support page</a>.</p>
+<div class="info" data-info-ver="1.5.1">
+	<p><b>Update information (2019/06/08) :</b> Version 1.5.1 has been released. Thank you for updating. Fixed a small bug in the settings page. Please check update information on <a href="https://azisava.sakura.ne.jp/tablistboard/en.html">support page</a>.</p>
 	<div class="info_close" title="Close"></div>
 </div>
 <div id="config">
