--- a/main_ja.html
+++ b/main_ja.html
@@ -18,8 +18,8 @@
 		<span id="conf_cancel" class="header_btn_conf">キャンセル</span>
 	</div>
 </div>
-<div class="info" data-info-ver="1.5.0">
-	<p><b>更新情報（2018/10/27）：</b> バージョン1.5.0をリリースしました。アップデートしていただきありがとうございます。ショートカットが変更できるようになりました。サイドバー使用時、タブバー上の他のリストのタブを隠せるようになりました。<a href="https://azisava.sakura.ne.jp/tablistboard/">サポートサイト</a>にてぜひ更新内容をご確認下さい。</p>
+<div class="info" data-info-ver="1.5.1">
+	<p><b>更新情報（2019/06/08）：</b> バージョン1.5.1をリリースしました。アップデートしていただきありがとうございます。設定画面に発生していたバグを修正しました。<a href="https://azisava.sakura.ne.jp/tablistboard/">サポートサイト</a>にて更新内容をご確認下さい。</p>
 	<div class="info_close" title="閉じる"></div>
 </div>
 <div id="config">
